--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,15 +8,16 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-dotnettools.csharp",
-                "shardulm94.trailing-spaces",
-                "mikestead.dotenv",
-                "fernandoescolar.vscode-solution-explorer",
-                "jmrog.vscode-nuget-package-manager",
-                "patcx.vscode-nuget-gallery",
-                "pkief.material-icon-theme",
-                "formulahendry.dotnet-test-explorer",
-                "ms-dotnettools.vscode-dotnet-runtime",
+                "ms-dotnettools.csdevkit",
+                // "ms-dotnettools.csharp",
+                // "shardulm94.trailing-spaces",
+                // "mikestead.dotenv",
+                // "fernandoescolar.vscode-solution-explorer",
+                // "jmrog.vscode-nuget-package-manager",
+                // "patcx.vscode-nuget-gallery",
+                // "pkief.material-icon-theme",
+                // "formulahendry.dotnet-test-explorer",
+                // "ms-dotnettools.vscode-dotnet-runtime",
                 "ms-azuretools.vscode-docker"
                 ]
           }
